Okay, so the weird spacing is fixed. Now there is still a bit of a hassle, because there is a piece out of the border, and I don't know why... :/

--- a/public/assets/css/video-finder.css
+++ b/public/assets/css/video-finder.css
@@ -38,24 +38,17 @@
 }
 
 #tab-container li.active {
-  border: 1px solid rgba(0,0,0,0);
+  
 }
 
 #tab-container li.active>a {
   background-color: #555;
   color: #AAA;
   border-color: #999;
-  border-bottom: 1px solid #666;
-}
-#tab-container ul {
-  margin-bottom: 0px;
-  padding-bottom: 0px;
+  border-bottom: 1px solid transparent;
 }
 
 .tab-pane {
-  background-color: #666;
-  border-bottom-right-radius: 4px 4px;
-  border-bottom-left-radius: 4px 4px;
   padding: 5px;
 }
 
